<resources>
    <string name="app_name" translatable="false">KPanime</string>
    <string name="episode">Episode</string>
    <string name="search">Search</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="latest">Latest</string>
    <string name="current">Current</string>
    <string name="shows">Shows</string>
    <string name="search_shows">Search shows</string>
    <string name="episode_text">Episode %1$s</string>
    <string name="episode_released">Episode %1$s was released!</string>
    <string name="batch_text">Batch %1$s</string>
    <string name="loading">Loading…</string>
    <string name="warning">"Warning: This feature is experimental and can cause a crash on the application.\nThe Video stream is treated as a torrent download, and can stop playing at any given time depending on the total number of seeds or the internet speed.\n\nThe use of VLC player is recommended."</string>
    <string name="quality480p" translatable="false">480p</string>
    <string name="quality720p" translatable="false">720p</string>
    <string name="quality1080p" translatable="false">1080p</string>
    <string name="click_link">Click a link from the list bellow to download</string>
    <string name="delete_episode_after_exiting">Delete downloaded file</string>
    <string name="about_1">This app was created mainly to satisfy my anime needs, but the world is so huge and full of people with the same interests as myself, I published the app for all to use.</string>
    <string name="about_2">There is some costs to maintaining the app, namely the webserver that\'s providing the API with the information of the anime, so I added some small ads, that I think don\'t disrupt the user experience, I myself use the app with the ads.</string>
    <string name="buy_me_coffee">Buy me a coffee</string>
    <string name="watch_episode">To watch the episode choose a quality (experimental)</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="follow_system">Follow system settings</string>
    <string name="choose_a_theme">Choose a theme to display the app</string>
    <string name="app_settings">App Settings</string>
    <string name="app_version">App version</string>
    <string name="report">Report technical issues or suggest new features</string>
    <string name="send_feedback">Send feedback</string>
    <string name="theme">Theme</string>
    <string name="title_latest">Latest Releases</string>
    <string name="title_shows">All Shows</string>
    <string name="title_current">Current Season</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="service_unavailable">Service unavailable</string>
    <string name="added_to_favorites">Show added to Favorites</string>
    <string name="removed_from_favorites">Show removed from Favorites</string>
    <string name="press_back_exit">Press BACK again to exit</string>
    <string name="connecting">Connecting…</string>
    <string name="down_speed">Down. Speed: %s</string>
    <string name="about_3">I would really appreciate you if rated this app, and if you really liked this app and want to buy me a coffee I\'ll put here a button for your convenience ;)</string>
    <string name="delete_episode_summary">Deletes the file after exiting the episode screen</string>
    <string name="other">Other</string>
    <string name="saved_as_watched">Show saved as Watched</string>
    <string name="unsaved_watched">Show was removed from Watched</string>
    <string name="favorite">Favorite</string>
    <string name="watched">Watched</string>
    <string name="save_episode_downloaded">Episode saved as Downloaded</string>
    <string name="unsave_episode_downloaded">Episode removed from Downloaded</string>
    <string name="saved_episode_watched">Episode saved as Watched</string>
    <string name="unsave_episode_watched">Episode was removed from Watched</string>
    <string name="pick_favorites">Pick your favorite shows to fill this screen</string>
    <string name="your_favorites">Your Favorites</string>
    <string name="your_watched">Your Watched</string>
    <string name="stream_spinner_quality" translatable="false">%s (S: %d | L: %d)</string>
    <string name="play">Play</string>
    <string name="new_episode">New episodes released</string>
    <string name="new_episode_notification_channel_id" translatable="false">new_episode_channel</string>
    <string name="new_episode_notification_channel_name" translatable="false">New Episodes</string>
    <string name="new_episode_notification_line" translatable="false"><b>%s</b>: %s</string>
</resources>
