<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="pt.kitsupixel.kpanime.ui.about.AboutFragment">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/lgPadding"
                android:layout_marginTop="@dimen/lgPadding"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_launcher_round"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/lgPadding"
                android:layout_marginTop="@dimen/lgPadding"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mdPadding"
                android:text="@string/version_name"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/lgPadding"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/lgPadding"
                android:text="@string/about_1"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/lgPadding"
                android:layout_marginTop="@dimen/mdPadding"
                android:layout_marginEnd="@dimen/lgPadding"
                android:text="@string/about_2"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

<!--            <TextView-->
<!--                android:id="@+id/textView6"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="@dimen/lgPadding"-->
<!--                android:layout_marginTop="@dimen/mdPadding"-->
<!--                android:layout_marginEnd="@dimen/lgPadding"-->
<!--                android:text="@string/about_3"-->
<!--                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/textView5" />-->

<!--            <Button-->
<!--                android:id="@+id/coffee_button"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="@dimen/lgPadding"-->
<!--                android:text="@string/buy_me_coffee"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/textView6" />-->
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>